cursive-bootstrap/tests/ui/E-TYP/E-TYP-2405.cursive
// RUN: compile-fail
// DIAG: E-TYP-2405
// SPEC: 5.3
// DESC: Implementing state missing required payload field

class Resource {
    @Open {
        handle: i32
    }
    @Closed { }
}

modal MyResource <: Resource {  //~ ERROR E-TYP-2405
    @Open { }
    @Closed { }
}



public procedure main(move ctx: Context) -> i32 {
    return 0
}

